--- a/styles.css
+++ b/styles.css
@@ -12,25 +12,23 @@ hr {
   height: 3px;
 }
 
+div section{
+  height: 550px;
+}
+
 .img-header {
   display: block;
   width: auto;
   margin-left: auto;
   margin-right: auto;
-}
-.image-flottante {
-  float:left;
-  width: 50px;
-  margin-right: 10px
-}
-div {
-  border-radius:10px;
+  background-size: cover;
+  background-position: center;
 }
 
-.col-md-12 h1 {
+.header h1 {
   font-family: helvetica;
   text-align: left;
-  vertical-align:middle;
+  vertical-align: middle;
   width: 100%;
   height:100%;
 }
@@ -46,7 +44,6 @@ div {
 	background-color: rgba(255,255,255,0.5);
   padding:10px;
 }
-
 
 .mail {
   text-align: center;
